1998-08-27  Blair Zajac  <blair@gps.caltech.edu>

	* configure.in: Add the directory /usr/lib/fs/vxfs to the search
	path where configure looks for vxdump and vxrestore.  This is for
	Solaris so it can automatically handle vxfs filesystems.
	* client-src/sendbackup-dump.c: add missing last NULL argument to
	newvstralloc().
	* server-src/dumper.c add missing last NULL argument to	newvstralloc().
	* NEWS: reorder 2.4.1 items into most to least important for most
	users.

1998-08-21  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amanda.8.in (nofull): only level 1 incrementals

1998-08-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/chg-mtx.sh.in (PATH): added /usr/local/bin

	* configure.in (BUILD_CHANGER_SCRIPTS_LIBEXEC): added chg-zd-mtx
	(AC_OUTPUT): ditto
	* changer-src/Makefile.am (EXTRA_SCRIPTS): ditto
	* docs/TAPE.CHANGERS (chg-zd-mtx): documented it
	(chg-mtx): mentioned chg-zd-mtx

1998-08-20  Eric Doutreleau  <Eric.Doutreleau@int-evry.fr>

	* changer-src/chg-zd-mtx.sh.in: new changer script for
	Zubkoff/Dandelion version of mtx.

1998-08-19  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SAMBA: updated; documented new patch (sambatar.diff,
 	available in the patches page) and requirements about backup user.
	* docs/INSTALL: documented new patch

1998-08-18  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c (regex_s): refuse to compile if SAMBA_CLIENT
 	and HAVE_DUMP_ESTIMATE are both defined: the regexp that matches the
 	estimate from DU 4.0's dump also matches an output line from
 	smbclient, that provides an incorrect estimate.
	* docs/SYSTEM.NOTES: document the problem

1998-08-14  John R. Jackson  <jrj@purdue.edu>

	* docs/TAPE.CHANGERS: describe "advance" and clean up some spelling.

1998-08-13  Alexandre Oliva  <oliva@dcc.unicamp.br>, Marcel Hild  <hild@id-pro.de>

	* configure.in (--with-portrange): validate and define PORTRANGE
	* example/config.site: document it